<resources>
    <string name="app_name">TapJackingSecureViewDemo</string>
    <string name="secure_view_description">
        This activity demonstrates a view that detects when it is potentially obscured
        by other windows.
    </string>
    <string name="secure_view_step1_heading">Click me first:</string>
    <string name="secure_view_step1_detail">
        Pop up a toast that will overlay and obscure this window in a poor attempt to fool
        you into clicking the big red buttons.  Don\'t do it!
    </string>
    <string name="secure_view_step2_heading">Unfiltered demo:</string>
    <string name="secure_view_step2_detail">
        This button does no filtering.  This button will still work as usual while the
        toast is visible and is spoofing the view.  Careful!
    </string>
    <string name="secure_view_step3_heading">Built-in filtering demo:</string>
    <string name="secure_view_step3_detail">
        This button uses the built-in secure touch filtering provided by the framework
        using the android:filterTouchesWhenObscured attribute.  This button will be inoperable
        while the toast is visible.
    </string>
    <string name="secure_view_step4_heading">Custom filtering demo:</string>
    <string name="secure_view_step4_detail">
        This button filters touches using a touch listener to examine the MotionEvent flags
        and warns the user.  This button will display a message if touched while the
        toast is visible.
    </string>

    <string name="secure_view_pop_toast">Pop toast</string>
    <string name="secure_view_button">Don\'t click!  It\'ll cost you!</string>
    <string name="secure_view_action_dialog_title">Oh no!</string>
    <string name="secure_view_action_dialog_dismiss">Oops...</string>
    <string name="secure_view_caught_dialog_title">Saved!</string>
    <string name="secure_view_caught_dialog_message">
        Careful!  There appears to be another window partly obscuring this window...
        Something unutterably HORRIBLE might have happened.
    </string>
    <string name="secure_view_caught_dialog_dismiss">Phew!</string>

    <string name="secure_view_overlay_description">A toast!  A toast!</string>
    <string name="secure_view_overlay_button1">Totally safe, trust me...</string>
    <string name="secure_view_overlay_button2">Clicky?</string>
    <string name="secure_view_overlay_button3">Think of the penguins!</string>
</resources>
